# yap-to-text

./: .gitattributes  .gitignore  AGENTS.md  README.md  config.json.example  flash_attn-2.8.3+cu128torch2.11-cp312-cp312-linux_x86_64.whl  flash_attn-2.8.3+cu128torch2.11-cp312-cp312-win_amd64.whl  pyproject.toml
static/: index.html
stt/: __init__.py  __main__.py  audio.py  broadcast.py  config.py  obs.py  transcription.py  twitch.py
ytt/: __init__.py  __main__.py  broadcast.py  config.py  transcription.py  twitch.py
